# meeting_ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
Docs/: spec.md  (+3 more)
backend/: Dockerfile  README.md  dev.sh  main.py  pyproject.toml
backend/scripts/: transcribe_audio.py
backend/src/meetingai_backend/: __init__.py  app.py  job_state.py  jobs.py  markdown.py  settings.py  worker.py
backend/src/meetingai_backend/media/: __init__.py  assets.py  audio.py  chunking.py
backend/src/meetingai_backend/routers/: __init__.py  health.py  jobs.py  meetings.py  videos.py
backend/src/meetingai_backend/summarization/: __init__.py  models.py  openai.py  prompt.py  storage.py
backend/src/meetingai_backend/tasks/: __init__.py  ingest.py  summarize.py  transcribe.py
backend/src/meetingai_backend/transcription/: __init__.py  openai.py  progress.py  segments.py
backend/tests/: test_app_factory.py  test_backend_integration.py  test_health.py  test_integration_transcription_flow.py  test_job_state.py  test_jobs.py  test_jobs_api.py  test_markdown.py  test_media_assets.py  test_media_audio.py  test_media_chunking.py  test_media_creation_time.py  test_meetings_api.py  test_meetings_delete.py  test_meetings_markdown_api.py  test_speaker_mappings.py  test_summarization_prompt.py  test_summarization_service.py  test_tasks_ingest.py  test_tasks_summarize.py  test_tasks_transcribe.py  test_transcription_openai.py  test_transcription_progress.py  test_transcription_segments.py  test_videos.py  test_worker_failure_handler.py  test_worker_startup.py
(+25 files in other folders)
