[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=5.0.8",
    "rq>=1.16.2",
    "celery>=5.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.37.0",
    "openai>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
